[project]
name = "data-narrative"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "ruff>=0.14.7",
    "seaborn>=0.13.2",
]
